...
      />
    );
  if (statisticsPlans)
    return (
      <PremiumPlansComparison
        onBack={() => setStatisticsPlans(false)}
        testID="statistics-plans-comparison"
      />
    );
  if (voicePlans)
    return (
      <PremiumPlansComparison
        onBack={() => setVoicePlans(false)}
...
